archive/laika/css/style.css
@media screen and (max-height: 450px) {
  .sidenav {padding-top: 15px;}
  .sidenav a {font-size: 18px;}
  }

body {
  color:white;
  text-shadow: 0px 0px 2px black;
  font-family: "Lato", sans-serif;
  }

.sidenav, .sidebib {
  height: 100%;
  width: 0;
  position: fixed;
  z-index: 2;
  top:0;
  background-color: #111;
  overflow-x: hidden;
  padding-top: 60px;
  transition:0.4s;
  }

.sidenav a, .sidebib a {
  z-index:2;
  padding: 8px 8px 8px 32px;
  text-decoration: none;
  font-size: 25px;
  color: grey;
  display: block;
  }

.sidebib a {
  font-size:20px;
}

.sidenav a:hover, .sidebib a:hover, .player:hover, .openbtn:hover, .closebtn:hover {
  color: white;
  transition:0.3s;
  }

.openbtn, .closebtn {
  text-shadow: 0px 0px 3px grey;
  top:0;
  font-size:30px;
  cursor:pointer;
  color:grey;
  }

 .closebtn {
  position: absolute;
  cursor:pointer;
  }

.openbtn {
  z-index:1;
  position:fixed;
  }

.con {
  box-shadow: 0px 0px 5px grey;
  min-height:20px;
  position:relative;
  max-width:1100px;
  border:solid grey 3px;
  border-radius:10px;
  }

.con .bg {
  z-index:-1;
  position:absolute;
  height:100%;
  width:100%;
  background:#414141;
  opacity:0.35;
  }

.link{
  display:none;
  }

.trans {
  display:block;
  }

.player {
  letter-spacing:0.2rem;
  z-index:2;
  display:inline;
  font-size:36px;
  text-decoration:none;
  color:grey;
  text-shadow: 0px 0px 3px grey;
  }

.head, .player, #mainnav, #bib, .sidenav a, .sidebib a {
  -moz-user-select: none;
  -webkit-user-select: none;
  -ms-user-select:none;
  user-select:none;
  -o-user-select:none;
  }

.head {
  font-family:Verdana;
  }

#mhead {
  font-size:70px;
  letter-spacing:2rem;
  text-shadow: 0px 0px 12px white;
  }

#shead {
  font-size:25px;
  letter-spacing:0.5rem;
  text-shadow: 0px 0px 8px white;
  }

.edgebar {
  left:0;
  z-index:1;
  background-color: #111;
  position:fixed;
  overflow:hidden;
  height:45px;
  width:100%;
}

.conhead {
  letter-spacing:0.3rem;
}

.conbreak {
  box-shadow: 0px 0px 5px grey;
  border:solid grey 2px;
}

